force-app/main/default/objects/Warehouse_Inventory__c/Warehouse_Inventory__c.object-meta.xml
<CustomObject>
    <label>Warehouse Inventory</label>
    <nameField>
        <label>Warehouse Inventory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Warehouses Inventory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>