force-app/main/default/objects/Warehouse_Inventory__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Warehouses Inventory</relationshipLabel>
    <relationshipName>Warehouses_Inventory</relationshipName>
    <type>Lookup</type>
</CustomField>