force-app/main/default/objects/Warehouse_Inventory__c/fields/Batch_or_Serial_Type__c.field-meta.xml
<CustomField>
    <fullName>Batch_or_Serial_Type__c</fullName>
    <label>Batch or Serial Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Batch</fullName>
            </value>
            <value>
                <fullName>Serial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>