force-app/main/default/objects/Warehouse_Inventory__c/fields/FrameNo__c.field-meta.xml
<CustomField>
    <fullName>FrameNo__c</fullName>
    <formula>Asset__r.Frame_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FrameNo</label>
    <type>Text</type>
</CustomField>