force-app/main/default/objects/Warehouse_Inventory__c/fields/ModelCode__c.field-meta.xml
<CustomField>
    <fullName>ModelCode__c</fullName>
    <formula>Asset__r.Product2.Model_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Model Code</label>
    <type>Text</type>
</CustomField>