force-app/main/default/objects/Warehouse_Inventory__c/fields/Opportunity_Reserved__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Reserved__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field use to reserve the ID of Opportunity reserve. The purpose of this action is to keep track when the order cancel. The quantity will pull back to the warehouse when they are the same Opportunity Id and the quantity reserved.</description>
    <label>Opportunity Reserved</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Warehouses Inventory</relationshipLabel>
    <relationshipName>Warehouses_Inventory</relationshipName>
    <type>Lookup</type>
</CustomField>