force-app/main/default/objects/Warehouse_Inventory__c/fields/Order_Reserved__c.field-meta.xml
<CustomField>
    <fullName>Order_Reserved__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field use to reserve the ID of Order reserve. The purpose of this action is to keep track when the order cancel. The quantity will pull back to the warehouse when they are the same Order Id and the quantity reserved.</description>
    <label>Order Reserved</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Warehouses Inventory</relationshipLabel>
    <relationshipName>Warehouses_Inventory</relationshipName>
    <type>Lookup</type>
</CustomField>