force-app/main/default/objects/Warehouse_Inventory__c/fields/Overide_QOH__c.field-meta.xml
<CustomField>
    <fullName>Overide_QOH__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Overide QOH</label>
    <type>Checkbox</type>
</CustomField>