force-app/main/default/objects/Warehouse_Inventory__c/fields/QoH__c.field-meta.xml
<CustomField>
    <fullName>QoH__c</fullName>
    <label>QoH</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>