force-app/main/default/objects/Warehouse_Inventory__c/fields/Quantity_Need_to_Order__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Need_to_Order__c</fullName>
    <label>Quantity Need to Order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>