force-app/main/default/objects/Warehouse_Inventory__c/fields/Reserved_Comment__c.field-meta.xml
<CustomField>
    <fullName>Reserved_Comment__c</fullName>
    <description>This field used to note where and what to reserve between objects.</description>
    <label>Reserved Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>