force-app/main/default/objects/Warehouse_Inventory__c/fields/Reserved_Qty__c.field-meta.xml
<CustomField>
    <fullName>Reserved_Qty__c</fullName>
    <label>Reserved Qty</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>