force-app/main/default/objects/Warehouse_Inventory__c/fields/Sale_Owner__c.field-meta.xml
<CustomField>
    <fullName>Sale_Owner__c</fullName>
    <formula>Asset__r.Sale_Owner__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sale Owner</label>
    <type>Text</type>
</CustomField>