force-app/main/default/objects/Warehouse_Inventory__c/fields/Stock_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Stock_In_Date__c</fullName>
    <description>This field use to track the date of stock in</description>
    <label>Stock In Date</label>
    <type>DateTime</type>
</CustomField>