force-app/main/default/objects/Warehouse_Inventory__c/fields/Stock_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Stock_Out_Date__c</fullName>
    <label>Stock Out Date</label>
    <type>DateTime</type>
</CustomField>