force-app/main/default/objects/Warehouse_Inventory__c/fields/Stocking_Age__c.field-meta.xml
<CustomField>
    <fullName>Stocking_Age__c</fullName>
    <formula>IF(ISNULL(Stocking_Date__c ) , TEXT(Stocking_Date__c) , TEXT(FLOOR((TODAY()-Stocking_Date__c+1)))&amp;&quot; Days&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stocking Age</label>
    <type>Text</type>
</CustomField>