force-app/main/default/objects/Warehouse_Inventory__c/fields/Stocking_Age_Number__c.field-meta.xml
<CustomField>
    <fullName>Stocking_Age_Number__c</fullName>
    <formula>IF(ISNULL(Stocking_Date__c ) , DAY(Stocking_Date__c ) , FLOOR((TODAY()-Stocking_Date__c+1)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stocking Age Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>