force-app/main/default/objects/Warehouse_Inventory__c/fields/Stocking_Date__c.field-meta.xml
<CustomField>
    <fullName>Stocking_Date__c</fullName>
    <label>Stocking Date</label>
    <type>Date</type>
</CustomField>