force-app/main/default/objects/Warehouse_Inventory__c/fields/Unit_cost__c.field-meta.xml
<CustomField>
    <fullName>Unit_cost__c</fullName>
    <label>Unit cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>