force-app/main/default/objects/Warehouse_Inventory__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Warehouses Inventory</relationshipLabel>
    <relationshipName>Warehouses_Inventory</relationshipName>
    <type>Lookup</type>
</CustomField>