force-app/main/default/objects/Warehouse_Inventory__c/fields/Warehouse_Location__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Warehouse Location</label>
    <referenceTo>Warehouse_Location__c</referenceTo>
    <relationshipLabel>Warehouses Inventory</relationshipLabel>
    <relationshipName>Warehouses_Inventory</relationshipName>
    <type>Lookup</type>
</CustomField>