force-app/main/default/objects/Warehouse_Inventory__c/fields/Warehouse_Location_Account__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Location_Account__c</fullName>
    <formula>CASESAFEID(Warehouse_Location__r.Account__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warehouse Location Account</label>
    <type>Text</type>
</CustomField>