force-app/main/default/objects/Warehouse_Inventory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Asset__c</columns>
    <columns>Warehouse_Location__c</columns>
    <columns>Stocking_Date__c</columns>
    <columns>Stocking_Age__c</columns>
    <columns>Frame_No__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>QoH__c</columns>
    <columns>ModelCode__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Warehouse_Location_Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Warehouse_Location__c</field>
        <operation>equals</operation>
        <value>Revzone HaNoi Bike&amp;PCA</value>
    </filters>
    <label>All</label>
    <sharedTo>
        <group>Group_User_In_DO_HCM</group>
    </sharedTo>
</ListView>