force-app/main/default/objects/Warehouse_Inventory__c/listViews/WH_PCA.listView-meta.xml
<ListView>
    <fullName>WH_PCA</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Product_Code__c</columns>
    <columns>Product_Record_Type__c</columns>
    <columns>QoH__c</columns>
    <columns>Stocking_Age__c</columns>
    <columns>Stocking_Age_Number__c</columns>
    <columns>Stocking_Date__c</columns>
    <columns>Warehouse_Location__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Record_Type__c</field>
        <operation>equals</operation>
        <value>PCA</value>
    </filters>
    <filters>
        <field>Product_Code__c</field>
        <operation>contains</operation>
    </filters>
    <label>WH PCA</label>
    <sharedTo></sharedTo>
</ListView>